Deploy changes